--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -3,3 +3,4 @@
 1.0.2:
     - 'Create tokens table'
     - create_tokens_table.php
+1.0.3: Unserialize token before parsing to ensure compatibility with Cookie::get()
