--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -6,3 +6,6 @@
 1.0.3: Unserialize token before parsing to ensure compatibility with Cookie::get()
 1.0.4: Lets CookieTokenAuth middleware return JSON if requested
 1.0.5: Fixes redirect problem
+1.0.6: Invalidates cookie auth token on logout
+1.0.7: Handles male-formed token and inactive user exceptions
+1.0.8: GraphQL support (requires Headstart plugin)
