--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
   "require": {
     "php": ">=7.0",
     "composer/installers": "~1.0",
-    "rainlab/user-plugin": "dev-master"
+    "rainlab/user-plugin": "^1.5"
   }
 }
