--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -11,3 +11,4 @@
 1.0.8: GraphQL support (requires Headstart plugin)
 1.0.9: Prevent user from knowing whether entered email exists (thanks to @helmutkaufmann)
 1.0.10: Bump Rainlab.User dependency
+1.0.11: Random password and passwordless.user.created event on user creation (thanks to @hmassimomegistus)
