--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -13,3 +13,4 @@
 1.0.10: Bump Rainlab.User dependency
 1.0.11: Random password and nocio.passwordless.user.created event on user creation (thanks to @massimomegistus)
 1.0.12: nocio.passwordless.user.beforeLoginEmail event (thanks to @massimomegistus)
+1.0.13: Add fallback base_url using Config::get('app.url') when currentPageUrl() fails (thanks to @snipiba)
