--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -14,3 +14,4 @@
 1.0.11: Random password and nocio.passwordless.user.created event on user creation (thanks to @massimomegistus)
 1.0.12: nocio.passwordless.user.beforeLoginEmail event (thanks to @massimomegistus)
 1.0.13: Add fallback base_url using Config::get('app.url') when currentPageUrl() fails (thanks to @snipiba)
+1.0.14: Update dependecy for RainLab.User to accept v.2.0 (thanks to @snipiba)
